--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,9 @@ services:
       APP_ENV: ${APP_ENV}
       TZ: ${TZ}
     volumes:
-      - ./app:/go/src/app:delegated
+      - ./:/go/src/app:delegated
     ports:
-      - "80:80"
-      - "443:443"
+      - "8080:8080"
     working_dir: /go/src/app
     depends_on:
       - db
