--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     depends_on:
       - db
   db:
-    image: postgres:latest
+    image: postgres:14
     environment:
       TZ: ${TZ}
       POSTGRES_DB: ${DB_NAME}
