--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -42,7 +42,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "github.com/aberyotaro/gql_sample_api/graph/model"
+#  - "github.com/aberyotaro/gql_sample_api/graph/model"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
@@ -52,6 +52,7 @@ autobind:
 models:
   ID:
     model:
+      - github.com/99designs/gqlgen/graphql.IntID
       - github.com/99designs/gqlgen/graphql.ID
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
