--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,4 +24,7 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - ./data:/var/lib/postgresql/data:delegated
+      - db_data:/var/lib/postgresql/data:delegated
+
+volumes:
+  db_data:
